--- a/looking-for-a-job.html
+++ b/looking-for-a-job.html
@@ -53,7 +53,7 @@
       </div>
 
        <!--filters-->
- 
+ <div class="mid-part">
     <div class="filters">
     <div class="headingmain">
     <div class="heading2"><img src="./images/filter.png" alt="">Filter</div>
@@ -92,10 +92,11 @@
   
 
     <div class="slidecontainer">
-      <input type="range" min="1" max="200" value="50" class="slider" id="myRange">
+        <p>Annual Salary (in Lakhs)</p>
+      <input type="range" min="1" max="10" value="0" class="slider" id="myRange">
     </div>
 
-
+    
     <div class="Experience">Years of experience
     <input type="text" placeholder="" class="search-box">
     <button class="clear-btn">Clear All</button>
@@ -111,7 +112,7 @@
 
       
         <!--jobs part (need duplication)-->
-
+   
         <div class="alljobs">
                     <div class="jobs">
                     <div class="head1">
@@ -305,7 +306,10 @@
 
   </div>
 
-  
+</div>
+<div class="view-more">
+    <input type="button" class="viewmore" value="View All Jobs">
+</div>
 
   
 
